--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,9 +1,154 @@
 //====================================================================================================
+.header {
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	// .header__container
+
+	&__container {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: rem(15);
+		min-height: 123px;
+		@media (max-width: $mobile) {
+			min-height: 60px;
+		}
+	}
+
+	// .header__logo
+
+	&__logo {
+		position: relative;
+		z-index: 5;
+	}
+
+	// .header__menu
+
+	&__menu {
+	}
+
+	// .header__button
+	&__button {
+		position: relative;
+		z-index: 5;
+		border: rem(1) solid #f1f1f1;
+		border-radius: rem(8);
+		font-weight: 500;
+		font-size: rem(14);
+		line-height: math.div(17, 14);
+		padding: rem(15) rem(24);
+		transition: all 0.3s ease 0s;
+		@media (any-hover: hover) {
+			&:hover {
+				background-color: $purpleColor;
+				border: rem(1) solid $purpleColor;
+				color: #fff;
+			}
+		}
+		@media (max-width: $mobile) {
+			padding: rem(10) rem(15);
+			color: #fff;
+			border: rem(1) solid $mainColor;
+			background-color: $mainColor;
+		}
+	}
+
+	// .header__actions
+
+	&__actions {
+		display: flex;
+		align-items: center;
+		gap: rem(15);
+	}
+}
+.menu {
+	// .menu__icon
+
+	&__icon {
+	}
+
+	// .menu__body
+
+	&__body {
+		@media (max-width: $mobile) {
+			position: fixed;
+			top: 0;
+			left: -100%;
+			width: 100%;
+			height: 100%;
+			overflow: auto;
+			transition: all 0.3s ease 0s;
+			background-color: $purpleColor;
+			padding: rem(90) rem(15) rem(30) rem(15);
+			&::before {
+				content: "";
+				position: fixed;
+				top: 0;
+				left: -100%;
+				transition: all 0.3s ease 0s;
+				width: 100%;
+				height: rem(60);
+				background-color: #b9b5e6;
+				z-index: 2;
+			}
+			.menu-open & {
+				left: 0;
+				&::before {
+					left: 0;
+				}
+			}
+		}
+	}
+
+	// .menu__list
+
+	&__list {
+		flex-wrap: wrap;
+		@media (min-width: $mobile) {
+			display: flex;
+			row-gap: rem(5);
+			@include adaptiveValue("column-gap", 56, 15, 0, 1200, 768);
+		}
+	}
+
+	// .menu__item
+
+	&__item {
+		transition: color 0.3s ease 0s;
+		text-align: right;
+		@media (max-width: $mobile) {
+			&:not(:last-child) {
+				margin-bottom: rem(20);
+			}
+		}
+	}
+
+	// .menu__link
+
+	&__link {
+		font-weight: 500;
+		line-height: 118.75%; /* 19/16 */
+		@media (any-hover: hover) {
+			&:hover {
+				color: $purpleColor;
+			}
+		}
+		@media (max-width: $mobile) {
+			color: #fff;
+			font-size: rem(32);
+		}
+	}
+}
+.icon-menu {
+}
 
 //====================================================================================================
 
 //Burger
-/*
+
 .icon-menu {
 	display: none;
 	@media (max-width: $mobile) {
@@ -11,6 +156,7 @@
 		position: relative;
 		width: rem(30);
 		height: rem(18);
+		flex: 0 0 rem(30);
 		z-index: 5;
 		@media (any-hover: none) {
 			cursor: default;
@@ -53,4 +199,3 @@
 		}
 	}
 }
-*/
