--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@ $fontSize: rem(16); // де 14(px) - розмір шрифту за замовч
 // Основні кольори
 $mainColor: #232e35; // Колір шрифту за замовчуванням
 $grayColor: #656d72;
+$purpleColor: #7e74f1;
 
 // Палітра кольорів
 // @import "base/colors-palette";
