--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -12,6 +12,8 @@
 		align-items: center;
 		justify-content: space-between;
 		gap: rem(15);
+		padding-top: rem(5);
+		padding-bottom: rem(5);
 		min-height: 123px;
 		@media (max-width: $mobile) {
 			min-height: 60px;
