--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,5 +1,11 @@
 // Заголовки, загальні БЕМ блоки та інше...
+.page {
+	// .page__main
 
+	&__main {
+	}
+}
+//========================================================================================================================================================
 .title {
 	// .title__label
 
@@ -41,7 +47,29 @@
 		}
 	}
 }
-
+//========================================================================================================================================================
 .text {
 	line-height: math.div(32, 16);
+	p {
+		&:not(:last-child) {
+			margin-bottom: rem(15);
+		}
+	}
+}
+//========================================================================================================================================================
+.social {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	row-gap: rem(5);
+	@include adaptiveValue("column-gap", 34, 15);
+	&__link {
+		font-size: rem(22);
+		transition: color 0.3s ease 0s;
+		@media (any-hover: hover) {
+			&:hover {
+				color: $purpleColor;
+			}
+		}
+	}
 }
