--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,6 +5,7 @@
 	top: 0;
 	left: 0;
 	z-index: 100;
+	background-color: rgba(255, 255, 255, 0.75);
 	// .header__container
 
 	&__container {
@@ -143,8 +144,6 @@
 			font-size: rem(32);
 		}
 	}
-}
-.icon-menu {
 }
 
 //====================================================================================================
