--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,3 +1,103 @@
 //====================================================================================================
 
+.main-section {
+	// .main-section__container
+
+	&__container {
+		display: grid;
+		min-height: 100%;
+		align-items: center;
+		grid-template-columns: repeat(2, 1fr);
+		padding-top: rem(30);
+		padding-bottom: rem(30);
+		column-gap: rem(20);
+		@media (max-width: $mobile) {
+			grid-template-columns: 1fr;
+			row-gap: rem(40);
+			justify-content: center;
+		}
+	}
+
+	// .main-section__content
+
+	&__content {
+	}
+
+	// .main-section__title
+
+	&__title {
+		&:not(:last-child) {
+			margin-bottom: rem(32);
+		}
+	}
+
+	// .main-section__text
+
+	&__text {
+		&:not(:last-child) {
+			margin-bottom: rem(40);
+		}
+	}
+
+	// .main-section__decor
+
+	&__decor {
+	}
+
+	// .main-section__image
+
+	&__image {
+	}
+}
+.decor-main-section {
+	// .decor-main-section__image
+	max-width: 336px;
+	width: 100%;
+	justify-self: end;
+
+	// .decor-main-section__box
+	&__box {
+		position: relative;
+		padding-bottom: percent(400, 336);
+		&::before,
+		&::after {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			border-radius: rem(16);
+		}
+		&::before {
+			z-index: 1;
+			background-color: #7e74f1;
+			transform: rotate(-9.95deg);
+		}
+		&::after {
+			z-index: 2;
+			background: #eae6fe url("@img/main/lines.svg") top right / 58% no-repeat;
+		}
+	}
+	&__image {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: rem(16);
+		overflow: hidden;
+	}
+
+	// .decor-main-section__picture
+
+	&__picture {
+		z-index: 3;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		max-width: 100%;
+	}
+}
+
 //====================================================================================================
