3 Section Services (HTML)

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -4,6 +4,10 @@
 
 	&__main {
 	}
+	// .page__services
+
+	&__services {
+	}
 }
 //========================================================================================================================================================
 .title {
