4 Section Portfolio (HTML + Header CSS)

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -8,6 +8,10 @@
 
 	&__services {
 	}
+	// .page__portfolio
+
+	&__portfolio {
+	}
 }
 //========================================================================================================================================================
 .title {
