--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -199,6 +199,7 @@
 		gap: rem(20);
 		justify-content: space-between;
 		align-items: center;
+		@include adaptiveValue("margin-bottom", 144, 30);
 	}
 
 	// .portfolio__title
@@ -230,6 +231,12 @@
 				background-color: #cbc2fc;
 			}
 		}
+		&.swiper-button-disabled {
+			opacity: 0.5;
+			cursor: default;
+			background: #eae6fe;
+			color: #7e74f1;
+		}
 		&_left {
 			transform: rotate(180deg);
 		}
@@ -255,32 +262,71 @@
 	}
 }
 
+//========================================================================================================================================================
+
 .item-portfolio {
+	border: 1px solid #f5f5f5;
+	border-radius: rem(8);
+	overflow: hidden;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	min-height: 100%;
 	// .item-portfolio__image-ibg
 
 	&__image-ibg {
+		overflow: hidden;
+		padding-bottom: percent(295, 361);
+		opacity: 0.5;
+		transition: opacity 0.8s ease 0s;
+		img {
+			object-position: top;
+			transition: transform 0.8s ease 0s;
+		}
+		@media (any-hover: hover) {
+			&:hover {
+				opacity: 1;
+				img {
+					transform: scale(1.05);
+				}
+			}
+		}
 	}
 
 	// .item-portfolio__body
 
 	&__body {
+		padding: rem(24);
+		display: flex;
+		flex-direction: column;
+		gap: rem(16);
+		flex: 1 1 auto;
 	}
 
 	// .item-portfolio__title
 
 	&__title {
+		flex: 1 1 100%;
 	}
 
 	// .item-portfolio__link-title
 
 	&__link-title {
+		color: #232e35;
+		line-height: math.div(20, 16);
+		font-weight: 500;
+		@media (any-hover: hover) {
+			&:hover {
+				color: $purpleColor;
+			}
+		}
 	}
-
-	// .item-portfolio__footer
 
 	&__footer {
+		display: flex;
+		align-items: center;
+		gap: rem(16);
 	}
-
 	// .item-portfolio__category
 
 	&__category {
@@ -289,5 +335,12 @@
 	// .item-portfolio__link
 
 	&__link {
+		font-size: rem(9.5);
+		transition: color 0.3s ease 0s;
+		@media (any-hover: hover) {
+			&:hover {
+				color: $purpleColor;
+			}
+		}
 	}
 }
