--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -200,6 +200,10 @@
 		justify-content: space-between;
 		align-items: center;
 		@include adaptiveValue("margin-bottom", 144, 30);
+		@media (max-width: em(600)) {
+			flex-direction: column;
+			align-items: stretch;
+		}
 	}
 
 	// .portfolio__title
@@ -213,6 +217,9 @@
 		display: flex;
 		align-items: center;
 		gap: rem(16);
+		@media (max-width: em(600)) {
+			justify-content: center;
+		}
 	}
 
 	// .portfolio__arrow
@@ -249,6 +256,10 @@
 	// .portfolio__slider
 
 	&__slider {
+		@media (max-width: em(650)) {
+			margin-right: rem(-15);
+			padding-right: rem(15);
+		}
 	}
 
 	// .portfolio__wrapper
@@ -290,6 +301,9 @@
 					transform: scale(1.05);
 				}
 			}
+		}
+		@media (any-hover: none) {
+			opacity: 1;
 		}
 	}
 
