5 Section Career (HTML structure)

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -12,6 +12,10 @@
 
 	&__portfolio {
 	}
+	// .page__career
+
+	&__career {
+	}
 }
 //========================================================================================================================================================
 .title {
