--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -363,39 +363,90 @@
 
 .career {
 	// .career__container
-
+	background-color: #fbfbfb;
 	&__container {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 		padding-top: rem(80);
 		padding-bottom: rem(30);
+	}
+
+	// .career__body
+
+	&__body {
 		display: grid;
-		align-content: center;
-		grid-auto-flow: column;
-		grid-template-columns: auto 1fr;
-		grid-template-rows: auto auto;
+		grid-template-columns: auto;
+		grid-template-rows: auto;
 		@include adaptiveValue("column-gap", 144, 20);
 		@include adaptiveValue("row-gap", 80, 20);
+		@media (min-width: $mobile) {
+			grid-template-columns: auto 1fr;
+			grid-template-rows: auto 1fr;
+			align-content: center;
+			align-items: start;
+			grid-auto-flow: column;
+		}
 	}
+
 	// .career__navigation
 
 	&__navigation {
-		display: grid;
-		gap: rem(9);
+		._tab-spoller & {
+			display: none;
+		}
 	}
 
 	// .career__content
 
 	&__content {
-		grid-row: span 2;
+		@media (min-width: $mobile) {
+			@include adaptiveValue("padding-top", 32, 15);
+			grid-row: span 2;
+		}
 	}
 }
 
 .navigation-career {
+	display: grid;
 	// .navigation-career__title
 
 	&__title {
+		width: 100%;
 		padding: rem(14) rem(24);
 		text-align: left;
 		line-height: math.div(19, 16);
+		transition: all 0.3s ease 0s;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		&:not(:last-child) {
+			margin-bottom: rem(9);
+		}
+		&::after {
+			font-size: rem(12);
+			@extend %ic;
+			content: "\e903";
+			display: none;
+		}
+		._tab-spoller & {
+			border: 1px solid rgba(102, 110, 115, 0.2);
+			&::after {
+				display: block;
+				transform: rotate(90deg);
+			}
+		}
+		&._tab-active {
+			background-color: #fff;
+
+			color: $purpleColor;
+			&::after {
+				display: block;
+				._tab-spoller & {
+					transform: rotate(-90deg);
+				}
+			}
+		}
 	}
 }
 
@@ -403,5 +454,98 @@
 	// .content-career__body
 
 	&__body {
+		._tab-spoller & {
+			padding: rem(15) rem(0);
+		}
+	}
+	// .content-career__header
+
+	&__header {
+		@include adaptiveValue("padding-bottom", 32, 20);
+		border-bottom: 1px solid #f1f1f1;
+	}
+
+	// .content-career__title
+
+	&__title {
+		font-size: rem(18);
+		font-weight: 500;
+		line-height: math.div(23, 18);
+		&:not(:last-child) {
+			margin-bottom: rem(8);
+		}
+	}
+
+	// .content-career__link-title
+
+	&__link-title {
+		text-decoration: underline;
+		@media (any-hover: hover) {
+			&:hover {
+				text-decoration: none;
+			}
+		}
+	}
+
+	// .content-career__location
+
+	&__location {
+		color: $grayColor;
+		font-size: rem(14);
+		line-height: math.div(17, 14);
+		&:not(:last-child) {
+			margin-bottom: rem(16);
+		}
+	}
+
+	// .content-career__time
+
+	&__time {
+		color: $grayColor;
+		font-size: rem(14);
+		line-height: math.div(24, 14);
+		font-weight: 500;
+		&:not(:last-child) {
+			margin-bottom: rem(16);
+		}
+	}
+
+	// .content-career__categories
+
+	&__categories {
+	}
+
+	// .content-career__main
+
+	&__main {
+		@include adaptiveValue("padding-top", 32, 20);
+	}
+
+	// .content-career__list
+
+	&__list {
+	}
+}
+
+.list-content-career {
+	// .list-content-career__item
+
+	&__item {
+		padding-left: rem(28);
+		color: $grayColor;
+		line-height: math.div(19, 16);
+		position: relative;
+		&:not(:last-child) {
+			margin-bottom: rem(16);
+		}
+		&::before {
+			content: "";
+			background-color: #d9d9d9;
+			width: rem(10);
+			height: rem(2);
+			position: absolute;
+			left: 0;
+			top: em(10, 16);
+		}
 	}
 }
