--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -16,6 +16,10 @@
 
 	&__career {
 	}
+	// .page__blog
+
+	&__blog {
+	}
 }
 //========================================================================================================================================================
 .title {
@@ -104,3 +108,13 @@
 	}
 }
 //========================================================================================================================================================
+.date {
+	font-size: rem(12);
+	font-weight: 500;
+	border-radius: rem(4);
+	background-color: #fbfbfb;
+	display: inline-block;
+	padding: rem(4) rem(8);
+	color: $grayColor;
+	line-height: math.div(15, 12);
+}
