7 Section Testimonials (HTML CSS JS responsive)

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -20,6 +20,10 @@
 
 	&__blog {
 	}
+	// .page__testimonials
+
+	&__testimonials {
+	}
 }
 //========================================================================================================================================================
 .title {
