8 Section Skills (HTML)

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -24,6 +24,10 @@
 
 	&__testimonials {
 	}
+	// .page__skills
+
+	&__skills {
+	}
 }
 //========================================================================================================================================================
 .title {
