9 Section Contacts (HTML CSS)

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -28,6 +28,10 @@
 
 	&__skills {
 	}
+	// .page__contacts
+
+	&__contacts {
+	}
 }
 //========================================================================================================================================================
 .title {
