--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -924,7 +924,6 @@
 	&__list {
 	}
 }
-
 .form {
 	// .form__item
 	display: flex;
@@ -1000,12 +999,10 @@
 		font-size: rem(12);
 	}
 }
-
 textarea.form__input {
 	height: rem(190);
 	resize: vertical;
 }
-
 .list-contacts {
 	// .list-contacts__item
 
@@ -1059,3 +1056,4 @@ textarea.form__input {
 		}
 	}
 }
+//========================================================================================================================================================
