--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,7 @@
 @import url("https://fonts.googleapis.com/css?family=Inter:regular,500&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Plus+Jakarta+Sans:500,700&display=swap");
 // Підключити, якщо є локальні файли шрифтів
-@import "fonts/fonts";
+// @import "fonts/fonts";
 
 // Підключення іконкових шрифтів ==============================================================================================================================================================================================================================================================================
 // Підключити, якщо є файл іконкового шрифту
@@ -154,4 +154,4 @@ body {
 @import "footer";
 
 // Підключення стилів окремих сторінок
-@import "home";
+@import "index";
