--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,3 @@
-//====================================================================================================
 .main-section {
 	// .main-section__container
 
@@ -102,81 +101,7 @@
 		max-width: 100%;
 	}
 }
-//====================================================================================================
-.services {
-	// .services__container
-	background-color: #fbfbfb;
-
-	&__container {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		padding-bottom: rem(30);
-		padding-top: rem(80);
-	}
-
-	// .services__title
-
-	&__title {
-		&:not(:last-child) {
-			@include adaptiveValue("margin-bottom", 100, 30);
-		}
-	}
-
-	// .services__items
-
-	&__items {
-		width: 100%;
-		display: grid;
-		@include adaptiveValue("gap", 56, 20);
-		grid-template-columns: repeat(auto-fill, minmax(rem(280), 1fr));
-	}
-
-	// .services__item
-
-	&__item {
-	}
-}
-.item-service {
-	border-radius: rem(8);
-	background-color: #fff;
-	@include adaptiveValue("padding", 50, 15);
-	display: grid;
-	justify-items: center;
-	text-align: center;
-	// .item-service__icon
-
-	&__icon {
-		width: rem(56);
-		height: rem(56);
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		padding: rem(16);
-		border-radius: rem(16);
-		background-color: #f5f3fe;
-		&:not(:last-child) {
-			margin-bottom: rem(24);
-		}
-	}
-
-	// .item-service__title
-
-	&__title {
-		font-weight: 500;
-		line-height: math.div(20, 16);
-		margin-bottom: rem(24);
-	}
-
-	// .item-service__text
-
-	&__text {
-		font-size: rem(14);
-		line-height: math.div(24, 14);
-	}
-}
-//========================================================================================================================================================
+// ===========================
 .portfolio {
 	// .portfolio__container
 
@@ -195,7 +120,7 @@
 		gap: rem(20);
 		justify-content: space-between;
 		align-items: center;
-		@include adaptiveValue("margin-bottom", 144, 30);
+		@include adaptiveValue("margin-bottom", 40, 20);
 		@media (max-width: em(600)) {
 			flex-direction: column;
 			align-items: stretch;
@@ -268,7 +193,6 @@
 	&__slide {
 	}
 }
-//========================================================================================================================================================
 .item-portfolio {
 	border: 1px solid #f5f5f5;
 	border-radius: rem(8);
@@ -352,7 +276,7 @@
 		}
 	}
 }
-//========================================================================================================================================================
+// ===========================
 .career {
 	// .career__container
 	background-color: #fbfbfb;
@@ -371,7 +295,7 @@
 		grid-template-columns: auto;
 		grid-template-rows: auto;
 		@include adaptiveValue("column-gap", 144, 20);
-		@include adaptiveValue("row-gap", 80, 20);
+		@include adaptiveValue("row-gap", 40, 20);
 		@media (min-width: $mobile) {
 			grid-template-columns: auto 1fr;
 			grid-template-rows: auto 1fr;
@@ -538,7 +462,7 @@
 		}
 	}
 }
-//========================================================================================================================================================
+// ===========================
 .blog {
 	// .blog__container
 
@@ -555,7 +479,7 @@
 
 	&__title {
 		&:not(:last-child) {
-			@include adaptiveValue("margin-bottom", 144, 30);
+			@include adaptiveValue("margin-bottom", 40, 20);
 		}
 	}
 
@@ -642,7 +566,7 @@
 		}
 	}
 }
-//========================================================================================================================================================
+// ===========================
 .testimonials {
 	background: #fbfbfb;
 	// .testimonials__container
@@ -658,7 +582,7 @@
 
 	&__title {
 		&:not(:last-child) {
-			@include adaptiveValue("margin-bottom", 132, 80);
+			@include adaptiveValue("margin-bottom", 90, 70);
 		}
 	}
 
@@ -724,7 +648,7 @@
 		align-self: flex-start;
 	}
 }
-//========================================================================================================================================================
+// ===========================
 .skills {
 	// .skills__container
 
@@ -739,7 +663,7 @@
 
 	&__title {
 		&:not(:last-child) {
-			@include adaptiveValue("margin-bottom", 112, 30);
+			@include adaptiveValue("margin-bottom", 40, 20);
 		}
 	}
 	// .skills__body
@@ -765,7 +689,7 @@
 .timeline {
 	// .timeline__item
 	display: grid;
-	@include adaptiveValue("gap", 64, 20);
+	gap: rem(10);
 	position: relative;
 	&::before {
 		content: "";
@@ -820,7 +744,7 @@
 		font-size: rem(14);
 		line-height: math.div(17, 14);
 		&:not(:last-child) {
-			@include adaptiveValue("margin-bottom", 24, 10);
+			@include adaptiveValue("margin-bottom", 18, 10);
 		}
 	}
 
@@ -837,7 +761,7 @@
 
 	&__text {
 		&:not(:last-child) {
-			@include adaptiveValue("margin-bottom", 64, 20);
+			@include adaptiveValue("margin-bottom", 60, 20);
 		}
 	}
 
@@ -881,7 +805,7 @@
 		}
 	}
 }
-//========================================================================================================================================================
+// ===========================
 .contacts {
 	// .contacts__container
 	background: #fbfbfb;
@@ -907,7 +831,7 @@
 
 	&__form {
 		&:not(:last-child) {
-			@include adaptiveValue("margin-bottom", 50, 30);
+			@include adaptiveValue("margin-bottom", 20, 16);
 		}
 	}
 
@@ -943,7 +867,7 @@
 
 	&__item-email {
 		&:not(:last-child) {
-			margin-bottom: rem(24);
+			margin-bottom: rem(16);
 		}
 	}
 
@@ -952,7 +876,7 @@
 	&__item-textarea {
 		height: rem(190);
 		&:not(:last-child) {
-			@include adaptiveValue("margin-bottom", 48, 24);
+			@include adaptiveValue("margin-bottom", 24, 16);
 		}
 	}
 
@@ -1056,4 +980,4 @@ textarea.form__input {
 		}
 	}
 }
-//========================================================================================================================================================
+// ===========================
