--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -78,8 +78,11 @@
 	&__body {
 		@media (max-width: $mobile) {
 			position: fixed;
+			display: flex;
+			justify-content: end;
+			align-items: center;
 			top: 0;
-			left: -100%;
+			right: -100%;
 			width: 100%;
 			height: 100%;
 			overflow: auto;
@@ -90,7 +93,7 @@
 				content: "";
 				position: fixed;
 				top: 0;
-				left: -100%;
+				right: -100%;
 				transition: all 0.3s ease 0s;
 				width: 100%;
 				height: rem(60);
@@ -98,9 +101,9 @@
 				z-index: 2;
 			}
 			.menu-open & {
-				left: 0;
+				right: 0;
 				&::before {
-					left: 0;
+					right: 0;
 				}
 			}
 		}
