--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -74,7 +74,7 @@
 		}
 		&::before {
 			z-index: 1;
-			background-color: #7e74f1;
+			background-color: $purpleColor;
 			transform: rotate(-9.95deg);
 		}
 		&::after {
@@ -338,11 +338,11 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		background-color: $purpleLightColor;
+		background-color: #cbc2fc;
 		border-radius: rem(8);
 
 		&:not(:last-child) {
-			margin-bottom: rem(5);
+			margin-bottom: rem(9);
 		}
 		&::after {
 			font-size: rem(12);
@@ -358,7 +358,7 @@
 		}
 		&._tab-active {
 			color: #fff;
-			background-color: #cbc2fc;
+			background-color: $purpleColor;
 			&::after {
 				display: block;
 				._tab-spoller & {
@@ -379,7 +379,7 @@
 	// .content-career__header
 
 	&__header {
-		@include adaptiveValue("padding-bottom", 32, 20);
+		@include adaptiveValue("padding-bottom", 24, 15);
 		border-bottom: 1px solid #f1f1f1;
 	}
 
@@ -387,7 +387,7 @@
 
 	&__title {
 		font-size: rem(18);
-		font-weight: 500;
+		font-weight: 600;
 		line-height: math.div(23, 18);
 		&:not(:last-child) {
 			margin-bottom: rem(8);
@@ -397,12 +397,7 @@
 	// .content-career__link-title
 
 	&__link-title {
-		text-decoration: underline;
-		@media (any-hover: hover) {
-			&:hover {
-				text-decoration: none;
-			}
-		}
+		font-weight: 500;
 	}
 
 	// .content-career__location
@@ -439,7 +434,7 @@
 	// .content-career__main
 
 	&__main {
-		@include adaptiveValue("padding-top", 32, 20);
+		@include adaptiveValue("padding-top", 24, 15);
 	}
 
 	// .content-career__list
@@ -705,7 +700,7 @@
 		top: em(2.5, 16);
 		height: 100%;
 		width: 1px;
-		background-color: #f1f1f1;
+		background-color: $purpleColor;
 	}
 	&__item {
 		padding-left: rem(40);
@@ -719,7 +714,7 @@
 			height: rem(16);
 			border-radius: 50%;
 			z-index: 3;
-			background-color: #f1f1f1;
+			background-color: $purpleColor;
 		}
 		&:last-child {
 			&::after {
