--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,8 +25,8 @@ $fontSize: rem(16); // де 14(px) - розмір шрифту за замовч
 // Основні кольори
 $mainColor: #232e35; // Колір шрифту за замовчуванням
 $grayColor: #656d72;
+$grayLightColor: #eeeeee;
 $purpleColor: #7e74f1;
-
 $purpleLightColor: #eae6fe;
 
 // Палітра кольорів
