--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,7 @@ $mainColor: #232e35; // Колір шрифту за замовчуванням
 $grayColor: #656d72;
 $grayLightColor: #eeeeee;
 $purpleColor: #7e74f1;
+$purpleMediumColor: #cbc2fc;
 $purpleLightColor: #eae6fe;
 
 // Палітра кольорів
